objects/ssot__FinancialAccountFee__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialAccountId__c</fullName>
        <label>Financial Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialFeeType__c</fullName>
        <label>Financial Fee Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Account Fee Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761235850_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialAccountFee_FinancialAccount_rel</label>
        <referenceTo>ssot__FinancialAccount__dlm</referenceTo>
        <relationshipLabel>FinancialAccountFee_FinancialAccount_rel</relationshipLabel>
        <relationshipName>rel_1697761235850_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>